<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.device.DeviceSettingsActivity"
    tools:showIn="@layout/activity_device_settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginBottom="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/type_id_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/type_id" />

                <Spinner
                    android:id="@+id/typeid_spinner"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_id_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/device_id" />

                <EditText
                    android:id="@+id/device_id_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/token_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/token" />

                <EditText
                    android:id="@+id/token_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/token_hint"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/organization_id_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/organization_id" />

                <Spinner
                    android:id="@+id/orgid_spinner"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/type_spinner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/numofdevices_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/numofdevices" />

                <EditText
                    android:id="@+id/numofdevices_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/freq_value_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/frequency" />

                <EditText
                    android:id="@+id/freq_value_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>



            <Switch
                android:id="@+id/sw_random"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:checked="true"
                android:text="@string/generate_random_data" />

            <LinearLayout
                android:id="@+id/parameter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <Switch
                    android:id="@+id/sw_save_trace"
                    android:layout_width="fill_parent"
                    android:layout_height="42dp"
                    android:checked="true"
                    android:text="@string/save_trace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_parameters"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_btn" />

                <sed.inf.u_szeged.hu.androidiotsimulator.views.ExpandedListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0px"
                    android:scrollbars="none" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trace_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/trace_import_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/trace_import_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_trace" />


            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
