<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.device.DevicesActivity"
    tools:showIn="@layout/activity_devices">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/controlls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_id"
            android:visibility="invisible" />


        <View
            android:layout_width="1dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/warning"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/warning_icon"
            android:src="@drawable/red_warning"
            android:visibility="gone" />


        <Button
            android:id="@+id/start_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start_all_btn" />

        <Button
            android:id="@+id/stop_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/stop_all_btn" />


        <Button
            android:id="@+id/delete_all_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@android:drawable/ic_delete" />

    </LinearLayout>


    <ListView
        android:id="@+id/devices_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/controlls" />


</RelativeLayout>
